log/build_2025-07-10_11-23-04/lane_following_robot/stderr.log
  File "/home/feven/lane_following_ws/install/lane_following_robot/lib/python3.10/site-packages/lane_following_robot/controller.py", line 165
    " and image processor "import rclpy
                           ^^^^^^
SyntaxError: invalid syntax

